# jandom

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: README.md  slime_chunk_checker.rs
generators/: GenRandomResults.java  README.md
src/: fdlibm.rs  lib.rs  strict_math.rs  system.rs  tests.rs
src/fdlibm/: halves.rs  mod.rs  parts.rs
src/fdlibm/log/: mod.rs
src/fdlibm/sqrt/: mod.rs  tests.rs
