[package]
name = "jandom"
version = "0.3.0"
edition = "2021"
authors = ["Kalle Kankaanpää <kalle.kankaanpaa@protonmail.com>"]
description = "Port of Java's Random"
license = "MIT OR Apache-2.0"
keywords = ["java", "random", "rng"]
categories = ["algorithms"]
repository = "https://github.com/kallekankaanpaa/jandom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
